<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:gravity="center"
        tools:context=".ui.home.HomeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/home_title_margin_bottom"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/application_name"
                android:layout_marginBottom="@dimen/home_img_margin_bottom"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/chat_application_logo" />

            <TextView
                android:id="@+id/application_name"
                style="@style/AppTheme.HomeAppTitle"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textSize="@dimen/home_app_title_size" />
        </RelativeLayout>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/sign_up"
            style="@style/AppTheme.ButtonDarkGreen"
            android:text="@string/button_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:onClick="@{(view) -> listener.onClick(view)}" />

        <Button
            android:id="@+id/login"
            style="@style/AppTheme.ButtonGreen"
            android:text="@string/button_login"
            android:layout_marginTop="@dimen/home_btn_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up"
            android:onClick="@{(view) -> listener.onClick(view)}"/>

    </android.support.constraint.ConstraintLayout>
</layout>